# PDF-Importer-FreeCAD

./: .gitattributes  .gitignore  COMPATIBILITY.md  HUMAN_CONFIRMATION.md  INSTALL.md  README.md  THIRD_PARTY_NOTICES.md  build_release.py  conftest.py  corpus_paths.py  pdfcadcore_sync_check.py  pdfcadcore_sync_manifest.json  preflight_check.py  pyproject.toml
.github/workflows/: auto-release.yml  fc-pdfimporter-ci.yml  steel-shapes-release.yml  windows-release.yml
PDFVectorImporter/: PDFImportHandler.py  PDFTools.py  README.md  THIRD_PARTY_NOTICES.md  package.xml  su_manual_verification_checklist.md
PDFVectorImporter/_archived/legacy_pdf_core_mirror/: PDFDimensionParser.py  PDFDocumentProfiler.py  PDFGenericClassifier.py  PDFGenericRecognizer.py  PDFGeometryCleanup.py  PDFHatchDetector.py  PDFImportConfig.py  PDFPrimitiveExtractor.py  PDFPrimitives.py  PDFRecognition.py  PDFRegions.py  PDFValidation.py  README.md
PDFVectorImporter/adapters/: sketchup_harness.rb
PDFVectorImporter/pdfcadcore/: auto_mode.py
PDFVectorImporter/src/: PDFDimensionParser.py  PDFDocumentProfiler.py  PDFGenericClassifier.py  PDFGenericRecognizer.py  PDFGeometryCleanup.py  PDFHatchDetector.py  PDFImportConfig.py  PDFImporterCmd.py  PDFImporterCore.py  PDFPrimitiveExtractor.py  PDFPrimitives.py  PDFRecognition.py  PDFRegions.py  PDFSvgTextRenderer.py  PDFValidation.py
PDFVectorImporter/tools/: list_corpus_tier1.py
_LLM_CONTROL_PACK/: QA-2026-06-22_text-mode-parity-status.md
_LLM_CONTROL_PACK/QA/: Q&A_INDEX.md  QA-2026-06-24_sketchup-2017-installer-website-policy.md  QA-2026-06-24_text-mode-verification-matrix.md  QA-2026-06-26_regression-popup-scale-alignment.md
installer/: PDFVectorImporter.iss  install-dev.ps1
scripts/: smoke_release_zip.py
steel_shapes/: ATTRIBUTION.md  README.md
steel_shapes/dxf/: Structural_Steel C 2D.dxf  Structural_Steel HP 2D.dxf  Structural_Steel HSS ROUND 2D.dxf  Structural_Steel L 2D.dxf  Structural_Steel M 2D.dxf  Structural_Steel MC 2D1.dxf  Structural_Steel MT 2D.dxf  Structural_Steel PIPE 2D.dxf  Structural_Steel S 2D.dxf  Structural_Steel ST 2D.dxf  Structural_Steel W 2D.dxf  Structural_Steel WT 2D.dxf
tests/: test_auto_mode_stats.py  test_clean_break.py  test_import_bounds.py  test_import_report_human_summary.py  test_import_report_pdf_audit.py  test_import_report_text_mode.py  test_import_report_writer.py  test_pdf_importer_text_reconstruction.py  test_pdf_open_gate.py  test_pdf_primitive_extractor.py  test_preflight_check.py  test_qa_report_v11.py  test_svg_text_renderer.py  test_svg_text_renderer_fallback.py
