[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-vector-importer-fc"
version = "4.0.48"
description = "PDF vector importer workbench for FreeCAD — BlueCollar Systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "BlueCollar Systems" }
]
dependencies = [
  "PyMuPDF>=1.24,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["PDFVectorImporter*"]
exclude = [
  "dev_logs*",
  "installer*",
  "tests*",
  "PDFVectorImporter.src.lib*",
  "PDFVectorImporter.qa_runs*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".pytest_tmp/cache"
norecursedirs = [
  "dev_logs",
  "installer",
  "PDFVectorImporter/src/lib",
  "PDFVectorImporter/qa_runs",
  ".git",
  "dist",
  "build",
]

[tool.ruff]
target-version = "py310"
exclude = [
    "dist",
    "__pycache__",
    ".ruff_cache",
    "build_release.py",
    "build_windows_installer.py",
    "PDFVectorImporter/qa_runs",
    "PDFVectorImporter/src/lib",
    "dev_logs",
    "installer",
]

[tool.ruff.lint]
select = ["F", "B"]
